--- a/index.html
+++ b/index.html
@@ -9,13 +9,46 @@
     <header>
         <img src="https://github.com/Datsenko52/best-films-in-world/blob/main/Web_Photo_Editor.jpg?raw=true" width="120px"height="120px"/>
         <nav>
-            <a href="https://datsenko52.github.io/best-films-in-world/"> Послуги </a>
-            <a href="!"> Відгуки </a>
-            <a href="!"> Соц Мережі </a>
+            <a href="https://datsenko52.github.io/dasty.agency/">  Головна </a>
+           
         </nav>
     </header>
     <main>
-     
+     <p>Чому саме ми?<br>
+
+Ми – команда, яка допомагає вашому бізнесу розкривати свій потенціал у світі соціальних мереж.<br>
+         Ми працюємо не просто для створення постів, а для побудови вашого бренду та залучення аудиторії.<br>
+
+Ось кілька причин, чому клієнти обирають саме нас:<br>
+Персоналізований підхід<br>
+Ми знаємо, що кожен бізнес унікальний, тому створюємо стратегії,<br>
+         які максимально відповідають вашим цілям, цінностям і стилю.<br>
+
+1. Досвід та креативність<br>
+У нас є сучасні інструменти та свіжі ідеї, щоб ваша сторінка виглядала не як у всіх.
+         <br> Ми створюємо контент, що викликає емоції, залучає аудиторію та стимулює продажі.<br>
+
+2. Прозорість у роботі<br>
+Ви завжди будете знати, як використовуються ваші ресурси,<br> і отримаєте регулярні звіти про результати.<br>
+
+3. Дослідження ринку та конкурентів <br>
+Ми аналізуємо вашу нішу, вивчаємо цільову аудиторію та конкурентів,<br>
+         щоб ваша стратегія була на крок попереду.<br>
+
+4.Розумна вартість<br>
+Ми пропонуємо ефективні рішення, які не обтяжують ваш бюджет.<br>
+
+Наша мета – не лише створити красивий профіль, а й допомогти вашому бізнесу зростати,<br>
+         збільшувати впізнаваність і зміцнювати зв’язок із клієнтами.<br>
+Обираючи нас, ви інвестуєте у професійний підхід і результати, які працюють. Давайте разом виведемо ваш бренд на новий рівень!
+
+
+
+
+
+
+
+</p>
 
 <h5> ВИБИРАЙ ПРОФЕСІОНАЛІВ<br> Dasty </h5>
     </main>
